[package]
name = "isoperm"
version = "0.1.0"
authors = ["Sicheng Pan <pansicheng@berkeley.edu>"]
edition = "2021"
description = "A simple crate for constrained permutation."
repository = "https://github.com/Sicheng-Pan/isoperm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.2"
itertools = "0.10"
